--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@
 $main-color: #FFE031;
 $dark-color: #414141; //textos
 $gray-color: #A7A7A7;
+$light-gray: #F2F2F2;
 $complementary-color: #CCCCCC;
 $font-buttons-category-color: #6C6C6C;
 $font-roboto: 'Roboto', sans-serif;
