--- a/src/components/bannerCarrousel/bannerCarrousel.scss
+++ b/src/components/bannerCarrousel/bannerCarrousel.scss
@@ -30,3 +30,17 @@
     height: auto;
     display: block;
 }
+
+@media screen and (min-width: 768px) {
+    .slide-container {
+        height: 100px;
+
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .slide-container {
+        height: 120px;
+
+    }
+}
