--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -2,6 +2,7 @@
 
 .feed {
     padding: 1rem;
+    padding-bottom: 6rem;
 
     &__location-container {
         width: 100%;
@@ -38,5 +39,43 @@
 
     &__subtitle {
         font-weight: 300;
+    }
+
+    &__restaurants-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1.3rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .feed {
+
+        &__restaurants-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr ;
+        }
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .feed {
+
+        &__restaurants-container {
+            grid-template-columns: repeat(3, 350px);
+            justify-content: center;
+            gap: 1rem;
+        }
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .feed {
+
+        &__restaurants-container {
+            grid-template-columns: repeat(4, 350px);
+            justify-content: center;
+            gap: 1rem;
+        }
     }
 }
