--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -7,7 +7,8 @@
 
 .layout {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     max-height: 100%;
     width: 100%;
+    background-color: rgb(252, 252, 252);
 }
