:lipstick: feed styles

--- a/src/components/bannerCarrousel/bannerCarrousel.scss
+++ b/src/components/bannerCarrousel/bannerCarrousel.scss
@@ -41,6 +41,10 @@
 @media screen and (min-width: 1100px) {
     .slide-container {
         height: 120px;
-
+        cursor: pointer;
+        img:hover {
+            transform: scale(1.05);
+        }
     }
+
 }
