--- a/src/components/restaurantCard/restaurantCard.scss
+++ b/src/components/restaurantCard/restaurantCard.scss
@@ -7,6 +7,7 @@
     overflow: hidden;
     background-color: white;
     width: 100%;
+    cursor: pointer;
 
     &__image-container {
         width: 130px;
@@ -15,20 +16,21 @@
         justify-content: center;
         position: relative;
         overflow: hidden;
+        border-radius: 10px 10px 0 10px;
     }
 
     &__image {
         width: 130px;
         height: 130px;
         object-fit: cover;
-        border-radius: 10px 10px 10px 10px;
+
     }
 
     &__rectangle {
         position: absolute;
         height: 100%;
         right: -1px;
-        bottom: -1px;
+        bottom: -2px;
     }
 
     &__info-container {
@@ -52,6 +54,7 @@
         margin-bottom: 10px;
         margin-right: 0.3px;
     }
+
     &__rate-icon {
         height: 12px;
     }
@@ -77,10 +80,21 @@
         font-size: 11px;
         color: $gray-color;
         letter-spacing: -0.3px;
+
         span {
             color: $dark-color;
         }
     }
 }
 
+@media screen and (min-width: 1100px) {
+    .restaurant:hover  {
+        transform: scale(1.05);
 
+    }
+
+    .restaurant:hover .restaurant__image {
+        transform: scale(1.2);
+        opacity: 0.9;
+    }
+}
