--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/variables.scss";
 
 .feed {
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     padding-bottom: 6rem;
 
     &__location-container {
@@ -58,7 +58,7 @@
     }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1160px) {
     .feed {
         padding: 0.5rem 2rem 2rem;
         &__restaurants-container {
