:sparkles: edit profile page

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -110,3 +110,11 @@
     }
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .profile {
+    &__settings-container {
+      width: 500px;
+    }
+  }
+}
