--- a/src/pages/editProfile/editProfile.scss
+++ b/src/pages/editProfile/editProfile.scss
@@ -13,6 +13,7 @@
     top: 1rem;
     left: 1rem;
     width: 1.5rem;
+    cursor: pointer;
   }
 
   &__picture-container {
@@ -38,6 +39,7 @@
     bottom: 17px;
     right: 17px;
     width: 18px;
+    cursor: pointer;
   }
 
   &__change-image {
@@ -45,11 +47,24 @@
     flex-direction: column;
     gap: 0.5rem;
     margin-bottom: 1rem;
-  }
-
-  &__input-file {
-    border: none;
     cursor: pointer;
+
+    input[type=file] {
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: $dark-color;
+    }
+
+    input[type=file]::file-selector-button {
+      color: $dark-color;
+      padding: 5px 20px;
+      background: $main-color;
+      border-radius: 10px;
+      border: none;
+      margin-right: 10px;
+      cursor: pointer;
+    }
+
   }
 
   &__form {
@@ -85,15 +100,138 @@
       background-color: transparent;
       color: $dark-color;
     }
+  }
 
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
+  &__btn-save,
+  &__btn-change {
+    background-color: $main-color;
+    border: none;
+    color: $dark-color;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
+  &__btn-save {
+    padding: 10px;
+    width: 100%;
+  }
+
+  &__btn-change {
+    padding: 7px 20px;
+    width: 50%;
+    align-self: center;
+  }
+
+  &__hidden {
+    display: none;
+  }
+
+  &__edit {
+    background-color: #e9e9e9;
+  }
+}
+
+@media screen and (min-width: 650px){
+  .edit-profile {
+
+    &__return {
+      top: 1.3rem;
+      left: 1.3rem;
+      width: 1.7rem;
     }
 
-    input[type="number"] {
-      -moz-appearance: textfield;
+    &__picture-container {
+      font-size: 16px;
+    }
+
+    &__picture {
+      width: 80px;
+      height: 80px;
+    }
+
+    &__camera-icon {
+      position: absolute;
+      bottom: 17px;
+      right: 17px;
+      width: 20px;
+    }
+
+    &__change-image {
+      input[type=file] {
+        font-size: 16px;
+      }
+
+      input[type=file]::file-selector-button {
+        padding: 7px 20px;
+      }
+
+    }
+
+    &__form {
+      width: 70%;
+    }
+
+    &__input-container {
+      padding: 1.2rem 1.5rem;
+      input {
+        font-size: 16px;
+      }
+      img {
+        width: 1.2rem;
+        cursor: pointer;
+      }
+    }
+
+    &__btn-save,
+    &__btn-change {
+      font-size: 16px;
+    }
+  }
+}
+
+@media screen and (min-width: 1100px){
+  .edit-profile {
+
+    &__return {
+      top: 2rem;
+      left: 2rem;
+    }
+
+    &__picture-container {
+      font-size: 15px;
+    }
+
+    &__picture {
+      width: 90px;
+      height: 90px;
+    }
+
+    &__camera-icon {
+      width: 25px;
+    }
+
+    &__change-image {
+      input[type=file] {
+        font-size: 15px;
+      }
+    }
+
+    &__form {
+      padding: 1rem;
+      width: 450px;
+    }
+
+    &__input-container {
+      padding: 1rem 1.5rem;
+      input {
+        font-size: 15px;
+      }
+    }
+
+    &__btn-save,
+    &__btn-change {
+      font-size: 15px;
     }
   }
 }
