--- a/src/pages/editProfile/editProfile.scss
+++ b/src/pages/editProfile/editProfile.scss
@@ -132,7 +132,7 @@
   }
 }
 
-@media screen and (min-width: 650px){
+@media screen and (min-width: 650px) {
   .edit-profile {
 
     &__return {
@@ -174,9 +174,11 @@
 
     &__input-container {
       padding: 1.2rem 1.5rem;
+
       input {
         font-size: 16px;
       }
+
       img {
         width: 1.2rem;
         cursor: pointer;
@@ -190,7 +192,7 @@
   }
 }
 
-@media screen and (min-width: 1100px){
+@media screen and (min-width: 1100px) {
   .edit-profile {
 
     &__return {
@@ -215,6 +217,10 @@
       input[type=file] {
         font-size: 15px;
       }
+
+      input[type=file]::file-selector-button:hover {
+        background-color: #ffe44d;
+      }
     }
 
     &__form {
@@ -224,6 +230,7 @@
 
     &__input-container {
       padding: 1rem 1.5rem;
+
       input {
         font-size: 15px;
       }
@@ -232,6 +239,10 @@
     &__btn-save,
     &__btn-change {
       font-size: 15px;
+
+      &:hover {
+        background-color: #ffe44d;
+      }
     }
   }
 }
