--- a/src/components/restaurantCard/restaurantCard.scss
+++ b/src/components/restaurantCard/restaurantCard.scss
@@ -1,6 +1,6 @@
 @import "../../assets/styles/variables.scss";
 
-.restaurant {
+.restaurant-card {
     display: flex;
     border-radius: 10px;
     gap: 0.6rem;
