--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -6,6 +6,7 @@ $gray-color: #A7A7A7;
 $light-gray: #F2F2F2;
 $complementary-color: #CCCCCC;
 $font-buttons-category-color: #6C6C6C;
+$background_inputs: #e0e0e0;
 $font-roboto: 'Roboto', sans-serif;
 
 
