--- a/src/components/bannerCarrousel/bannerCarrousel.scss
+++ b/src/components/bannerCarrousel/bannerCarrousel.scss
@@ -17,7 +17,7 @@
 
 .slide-container {
     display: flex;
-    width: 100%;
+    width: 97%;
     height: 80px;
     justify-content: center;
     align-items: center;
@@ -46,5 +46,11 @@
             transform: scale(1.05);
         }
     }
+}
 
+
+@media screen and (min-width: 1400px) {
+    .swiper-wrapper {
+        justify-content: center;
+    }
 }
