--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,7 +2,11 @@
 
 $main-color: #FFE031;
 $dark-color: #414141; //textos
-$gray-color: #A7A7A7;
+$gray-color: #A7A7A7; //span
+$green-color: #77DF52;
+$red-color: #DF5252;
+$skin-color: #FFEE8D;
 $complementary-color: #CCCCCC;
 $font-buttons-category-color: #6C6C6C;
 $font-roboto: 'Roboto', sans-serif;
+$complementary-color-light: #F2F2F2; //botones seleccionables
