--- a/src/pages/food/main.scss
+++ b/src/pages/food/main.scss
@@ -8,9 +8,16 @@
     background-color: #fefdf9;
     flex-direction: column;
     align-items: center;
+    @include tablet{
+        padding: 1vh 8vw;
+    }
+    @include desktop{
+        padding: 2vh 6vw;
+    }
     &__header{
+        
         position: relative;
-        height: 40vh;
+        max-height: 40vh;
         display: flex;
         justify-content: center;
         width: 100%;
@@ -21,14 +28,14 @@
          margin-top: 50px;
          gap: 50px;
         &__textbox{
-           // width: 100%;
            font-size: calc(16px + 0.5vw);
            width: 100%;
            display: flex;
            flex-direction: column;
-           justify-content: center;
+           text-align: start;
            gap: 20px;
            padding: 20px;
+           justify-content: start
         }
          &__back{
             z-index: 1;
@@ -77,9 +84,15 @@
         &__media{
             width: 100%;
             height: 100%;
+            max-height: 30vh;
+            @include desktop{
+                min-height: 250px;
+            }
+           
           & img{
             width: 100%;
             height: 100%;
+            max-height: 30vh;
             object-fit: cover;
             border-radius: 0  0 20px 20px;
             @include tablet{
