--- a/src/pages/Restaurant/main.scss
+++ b/src/pages/Restaurant/main.scss
@@ -29,6 +29,7 @@
     }
     &__back {
       width: calc(16px + 1vw);
+      cursor: pointer;
       & img {
         width: 100%;
         height: 100%;
