--- a/src/pages/food/main.scss
+++ b/src/pages/food/main.scss
@@ -64,6 +64,7 @@
             }
         }
         &__back{
+            cursor: pointer;
             position: absolute;
             height: calc(24px + 1vw);
             left: 15px;
