--- a/src/pages/food/main.scss
+++ b/src/pages/food/main.scss
@@ -8,6 +8,7 @@
     background-color: #fefdf9;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 80px;
     @include tablet{
         padding: 1vh 8vw;
     }
