--- a/src/pages/signUp/main.scss
+++ b/src/pages/signUp/main.scss
@@ -41,6 +41,7 @@
         margin-bottom: 10px;
         outline: none;
     }
+
     &__submit{
         cursor: pointer;
         position: relative;
@@ -58,5 +59,19 @@
             color: $main-color;
         }
 
+    }
+}
+
+#swal2-title {
+    font-family: $font-roboto;
+    line-height: 2rem;
+}
+
+.swal2-confirm, .swal2-cancel {
+    font-family: $font-roboto;
+    background-color: $main-color!important;
+    box-shadow: none !important;
+    &:hover {
+     transform: scale(1.02);
     }
 }
