--- a/src/pages/editProfile/editProfile.scss
+++ b/src/pages/editProfile/editProfile.scss
@@ -131,6 +131,10 @@
   &__edit {
     background-color: #e9e9e9;
   }
+
+  &__google {
+    color: rgb(172, 172, 172) !important;
+  }
 }
 
 @media screen and (min-width: 650px) {
