--- a/src/pages/paymentMethod/paymentMethod.scss
+++ b/src/pages/paymentMethod/paymentMethod.scss
@@ -14,8 +14,10 @@
         position: absolute;
         top: 1rem;
         left: 1rem;
-        width: 1.5rem;
         cursor: pointer;
+        img {
+            width: 1.5rem;
+        }
     }
 
     &__info-container {
@@ -71,7 +73,10 @@
         border: none;
         cursor: pointer;
         font-size: 16px;
-        color: $dark-color;
+        a{
+            text-decoration: none;
+            color: $dark-color ;
+        }
     }
 
 }
