--- a/src/pages/editProfile/editProfile.scss
+++ b/src/pages/editProfile/editProfile.scss
@@ -75,6 +75,7 @@
     justify-content: space-between;
     padding: 0.5rem 2rem 3rem;
     width: 100%;
+    gap: 1.5rem;
   }
 
   &__form-container {
