--- a/src/pages/paymentMethod/paymentMethod.scss
+++ b/src/pages/paymentMethod/paymentMethod.scss
@@ -33,6 +33,12 @@
         font-weight: 400;
         margin-bottom: 2rem;
     }
+    
+    &__alert {
+        font-size: 14px;
+        color: $dark-color;
+        text-align: center;
+    }
 
     &__methods {
         width: 100%;
