--- a/src/pages/signUp/main.scss
+++ b/src/pages/signUp/main.scss
@@ -67,7 +67,7 @@
     line-height: 2rem;
 }
 
-.swal2-confirm, .swal2-cancel {
+.swal2-confirm {
     font-family: $font-roboto;
     background-color: $main-color!important;
     box-shadow: none !important;
