search and allOrders improved

--- a/src/pages/allOrders/main.scss
+++ b/src/pages/allOrders/main.scss
@@ -60,15 +60,15 @@
           }
         }
 
-        &__delivered {
+        &__DELIVERED {
           color: $green-color;
         }
 
-        &__cancelled {
+        &__CANCELLED {
           color: $red-color
         }
 
-        &__ongoing {
+        &__ONGOING {
           color: $main-color
         }
       }
