--- a/src/pages/newOrder/main.scss
+++ b/src/pages/newOrder/main.scss
@@ -1,6 +1,13 @@
 @import "../../assets/styles/reset.scss";
 @import "../../assets/styles/variables.scss";
+.NewOrder{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
 
+}
 .NewOrder__container {
   display: flex;
   flex-direction: column;
@@ -8,34 +15,47 @@
   gap: 20px;
   font-family: $font-roboto;
   color: $dark-color;
-
+  @include tablet{
+    width: 700px;
+  }
+  @include desktop{
+    width: 800px;
+  }
+  width: 100%;
   & .NewOrder__deliver {
     display: flex;
     flex-direction: column;
     height: 10vh;
-
     &__text {
       height: 5vh;
     }
-
+    &__adress{
+      padding: 0;
+    }
     &__box {
       display: flex;
       align-items: center;
       height: 5vh;
+      cursor: pointer;
+      &:hover{
+       text-decoration: underline;
 
+      }
       & .NewOrder__deliver__location {
         height: 100%;
         display: flex;
+
       }
 
       & p {
         width: 100%;
-        padding-left: 5vw;
+       padding-left: 15px;
       }
 
       & .NewOrder__deliver__next {
         height: 100%;
         display: flex;
+        
       }
     }
   }
@@ -53,15 +73,17 @@
       height: 5vh;
       display: flex;
       justify-content: space-between;
-
+      
       & .NewOrder__payment__cash {
         border-radius: 5px;
         padding: 5px 20px;
         background-color: $complementary-color;
         width: 30vw;
+        max-width: 200px;
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
       }
 
       & .NewOrder__payment__card {
@@ -69,9 +91,12 @@
         padding: 5px;
         background-color: $complementary-color;
         width: 30vw;
+        max-width: 200px;
         display: flex;
-        justify-content: space-evenly;
-
+        justify-content: center;
+        gap: 10px;
+        align-items: center;
+        cursor: pointer;
         & figure {
           height: 100%;
 
@@ -155,7 +180,9 @@
       border: none;
       border: 2px solid $complementary-color;
       border-radius: 10px;
+      padding-top: 14px;
       resize: none;
+      height: 50px;
     }
   }
 
@@ -180,5 +207,11 @@
     width: 100%;
     border-radius: 10px;
     background-color: $main-color;
+    text-transform: capitalize;
+    cursor: pointer;
+    &:hover{
+      color: $main-color;
+      background-color: $dark-color;
+    }
   }
 }
