--- a/src/pages/orderAccepted/main.scss
+++ b/src/pages/orderAccepted/main.scss
@@ -1,17 +1,30 @@
 @import "../../assets/styles/reset.scss";
 @import "../../assets/styles/variables.scss";
-
+.OrderAccepted{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
 .OrderAccepted__container {
   display: flex;
   flex-direction: column;
   padding: 0px 5vh 2vw;
-  gap: 30px;
+  gap: 12vw;
   font-family: $font-roboto;
   color: $dark-color;
   align-items: center;
-  justify-content: space-between;
-  height: 80vh;
+  //justify-content: space-between;
 
+  height: 80vh;
+  @include tablet{
+    width: 700px;
+  }
+  @include desktop{
+    width: 800px;
+  }
+  width: 100%;
   &__figure {
     width: 80%;
     max-width: 600px;
@@ -29,6 +42,11 @@
     text-align: center;
     border-radius: 10px;
     cursor: pointer;
-    background-color: $main-color
+    background-color: $main-color;
+    &:hover{
+      color: $main-color;
+      background-color: $dark-color;
+    }
+
   }
 }
