--- a/src/pages/orderSet/main.scss
+++ b/src/pages/orderSet/main.scss
@@ -1,7 +1,22 @@
 @import "../../assets/styles/reset.scss";
 @import "../../assets/styles/variables.scss";
 
+
+.OrderSet{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
 .OrderSet__container {
+  @include tablet{
+    width: 700px;
+  }
+  @include desktop{
+    width: 800px;
+  }
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 0px 5vh 2vw;
