--- a/src/pages/allOrders/main.scss
+++ b/src/pages/allOrders/main.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   gap: 10px;
+  padding-bottom: 50px;
 }
 
 .AllOrders__container {
@@ -52,11 +53,14 @@
             height: 100%;
             border-radius: 100%;
             max-height: 50px;
+            max-width: 50px;
             @include tablet{
               max-height: 120px;
+              max-width: 120px;
             }
             @include desktop{
-              max-height: 90px;
+              max-height: 120px;
+              max-width: 120px;
             }
           }
         }
